<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_adapter_mir</name>
  <version>0.0.0</version>
  <description>RMF Fleet adapter for MIR</description>
  <maintainer email="eric.dongxx@gmail.com">rmf</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>rmf_fleet_adapter_python</exec_depend>
  <exec_depend>mir100-client</exec_depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
